--- a/projeto/css/estilos.css
+++ b/projeto/css/estilos.css
@@ -39,3 +39,18 @@ footer {
     background-size: cover;
     background-attachment: fixed;
 }
+
+.treinamentos {
+    display: flex;
+    justify-content: space-between;
+}
+
+.treinamentos section {
+    width: 32%;
+    background-color: white;
+    text-align: center;
+    border-radius: 4px;
+    box-shadow: grey 1px 1px 10px;
+}
+
+iframe { width: 100%; }
